Add MAUI extensions recommended for VSCode

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,7 @@
     "eamodio.gitlens",
     "davidanson.vscode-markdownlint",
     "quicktype.quicktype",
-    "christian-kohler.path-intellisense"
+    "christian-kohler.path-intellisense",
+    "ms-dotnettools.dotnet-maui"
   ]
 }
